Attempt to fix home page momentum scrolling most likely caused by height: 100% by adding webkit-overflow-scrolling: touch.

--- a/src/patternlab/css/child-theme.css
+++ b/src/patternlab/css/child-theme.css
@@ -4183,6 +4183,7 @@ table tr:nth-child(even) {
 html.front-page,
 body.front-page {
   height: 100%;
+  -webkit-overflow-scrolling: touch;
 }
 
 html.front-page .outer-wrapper,
