--- a/src/theme/core/sass/04-templates/_front-page.scss
+++ b/src/theme/core/sass/04-templates/_front-page.scss
@@ -3,6 +3,7 @@
 html.front-page ,
 body.front-page {
 	height: 100%;
+    -webkit-overflow-scrolling: touch;
 	
 	.outer-wrapper ,
 	.site-wrapper ,
